Fix port conflict for Phoenix, remove system_bridge from ailabs, and update Wolf installation method

--- a/group_vars/all/services.yml
+++ b/group_vars/all/services.yml
@@ -182,6 +182,12 @@ services:
     http_port: "{{ metamcp_port_host }}"
     group: AI
     icon: gateway.png
+  speaches:
+    name: SPEACHES
+    target: ailab-ubuntu.lan
+    http_port: "{{ speaches_port }}"
+    group: AI
+    icon: audio
   pihole-homelab-nuc:
     name: Pihole Homelab
     target: homelab-nuc.lan
